--- a/LibraryWebApp/Views/Books/BookForm.cshtml
+++ b/LibraryWebApp/Views/Books/BookForm.cshtml
@@ -44,6 +44,8 @@
     </div>
 
     @Html.HiddenFor(b => b.Book.Id)
+    @Html.AntiForgeryToken()
+
     <button type="submit" class="btn btn-primary">Save</button>
     @Html.ActionLink("Cancel", "Index", "Books", null, new { @class = "btn btn-primary" })
     <br /><br />
