--- a/LibraryWebApp/Views/Readers/ReaderForm.cshtml
+++ b/LibraryWebApp/Views/Readers/ReaderForm.cshtml
@@ -27,6 +27,7 @@
     </div>
 
     @Html.HiddenFor(r => r.Reader.Id)
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
     @Html.ActionLink("Cancel", "Index", "Readers", null, new { @class = "btn btn-primary"})
     <br />
